# Kaggle_Home_Depot_Search

./: .gitignore  LICENSE  README.md  jupytext.toml  pyproject.toml  run_experiments.py
configs/: default.yaml
notebooks/: 01_data_contract_and_eda.ipynb  01_data_contract_and_eda.py  02_classical_models_and_hpo_review.ipynb  02_classical_models_and_hpo_review.py  03_final_model_audit.ipynb  03_final_model_audit.py  kaggle_remaining_experiments.ipynb
notebooks_src/: 01_data_contract_and_eda.py  02_classical_models_and_hpo_review.py  03_final_model_audit.py
scripts/: create_decision_notebooks.py  generate_audit_artifacts.py
src/home_depot_search/: __init__.py  audit.py  cli.py  config.py  data_contract.py
src/home_depot_search/analysis/: eda.py  error_analysis.py
src/home_depot_search/data/: __init__.py  data_loader.py  text_cleaning.py  validation.py
src/home_depot_search/evaluation/: metrics.py  splits.py
src/home_depot_search/models/: baselines.py  cross_validation.py  embeddings.py  (+7 more)
tests/: test_audit.py  test_cli.py  test_config.py  test_data_contract.py  test_data_contract_negative.py
tests/analysis/: test_eda.py  test_error_analysis.py
tests/data/: test_data_loader.py  test_text_cleaning.py  test_validation.py
tests/evaluation/: test_metrics.py  test_splits.py
tests/models/: test_baselines.py  test_cross_validation.py  test_deberta_submission.py  test_hpo.py  test_padding.py  test_registry.py  test_ridge_trainer.py  test_run_experiments.py  test_text_features.py  test_transformer_trainer.py
tests/notebooks/: conftest.py  test_decision_notebooks.py  test_jupytext_sync.py
tests/utils/: test_logging.py
(+2 files in other folders)
