[project]
name = "home-depot-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Furkan", email = "furkan@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]
optional = [
    "optuna>=3.2.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.5.0",
    "transformers>=4.44.0",
    "xgboost>=3.2.0",
]
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N"]
ignore = []

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"
